Adds the possibility to use the inverted default colors for per-sign colors
Adds code for getting inverted colors if "inverted" is given as the per-sign color
Fixes exceptions thrown when the per-sign config value is malformed
Changes the default to use inverted colors for crimson, dark_oak, spruce and warped signs
Adds methods to get main and highlighting colors from the portal sign drawer in case the given default colors are invalid and fallback colors are necessary instead

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -27,12 +27,12 @@ gates:
     perSignColors:
       - 'ACACIA:default,default'
       - 'BIRCH:default,default'
-      - 'CRIMSON:WHITE,BLACK'
-      - 'DARK_OAK:WHITE,BLACK'
+      - 'CRIMSON:inverted,inverted'
+      - 'DARK_OAK:inverted,inverted'
       - 'JUNGLE:default,default'
       - 'OAK:default,default'
-      - 'SPRUCE:WHITE,BLACK'
-      - 'WARPED:WHITE,BLACK'
+      - 'SPRUCE:inverted,inverted'
+      - 'WARPED:inverted,inverted'
   integrity:
     # destroyedByExplosion - Whether to destroy gates with explosions (Creeper, TNT, etc.)
     destroyedByExplosion: false
