--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -54,6 +54,8 @@ gates:
     handleNonPlayerVehicles: true
     # handleLeashedCreatures - Whether to allow creatures lead by a player to teleport with the player
     handleLeashedCreatures: true
+    # enableCraftBookRemoveOnEjectFix - Whether to enable a fix that causes loss of NBT data, but allows vehicle teleportation to work when CraftBook's remove minecart/boat on eject setting is enabled
+    enableCraftBookRemoveOnEjectFix: false
 
 # I------------I-------------I #
 # stargate economy options #
