--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -8,8 +8,8 @@ api-version: 1.15
 softdepend: [ Vault ]
 commands:
   stargate:
-    description: Used to reload the plugin. Console use only.
-    usage: /<command> reload - Used to reload the plugin. Console use only.
+    description: Used to interact with the Stargate plugin at a system level.
+    usage: "/<command> - Prints the version of StarGate the server is running.\n/<command> about - Provides a link to StarGate's documentation./<command> reload - Used to reload the plugin.\n"
     aliases: [ sg ]
 permissions:
   sg:
