--- a/src/main/resources/migration/config-migrations-1_0_0.properties
+++ b/src/main/resources/migration/config-migrations-1_0_0.properties
@@ -48,7 +48,7 @@ usevault=
 adminUpdateAlert=
 folders.portalFolder=
 folders.gateFolder=
-gates.maxGatesEachNetwork=networkLimit
+gates.maxGatesEachNetwork=
 gates.defaultGateNetwork=defaultGateNetwork
 gates.cosmetic.rememberDestination=rememberLastDestination
 gates.cosmetic.sortNetworkDestinations=
@@ -64,6 +64,10 @@ gates.functionality.handleEmptyVehicles=
 gates.functionality.handleCreatureTransportation=
 gates.functionality.handleNonPlayerVehicles=
 gates.functionality.handleLeashedCreatures=handleLeashedCreatures
+gates.exitVelocity=gateExitSpeedMultiplier
+gates.cosmetic.perSignColors=
+gates.functionality.enableCraftBookRemoveOnEjectFix=
+advanced.waitForPlayerAfterTeleportDelay=
 economy.useEconomy=useEconomy
 economy.createCost=creationCost
 economy.destroyCost=destructionCost
