Fixed networklimit not being set to -1 if 0 for non knarvik ports
Also added another check on the configuration migration test

--- a/src/main/resources/migration/config-migrations-1_0_0.properties
+++ b/src/main/resources/migration/config-migrations-1_0_0.properties
@@ -21,7 +21,7 @@ cost-destination=chargeFreeDestination
 lang=language
 enableBungee=bungee.usingBungee
 default-gate-network=defaultGateNetwork
-maxgates=networkLimit
+maxgates=
 ignoreEntrance=
 destroyexplosion=destroyOnExplosion
 useiconomy=useEconomy
