Removes the isOnline property from InterPortal as it's never been and never will be used

--- a/src/main/resources/database/generic-queries.properties
+++ b/src/main/resources/database/generic-queries.properties
@@ -30,7 +30,7 @@ INSERT_INTER_PORTAL_FLAG_RELATION=INSERT INTO {InterPortalFlagRelation} (name, n
 DELETE_PORTAL_FLAG_RELATION=DELETE FROM {PortalFlagRelation} WHERE name = ? AND network = ?;
 DELETE_INTER_PORTAL_FLAG_RELATION=DELETE FROM {InterPortalFlagRelation} WHERE name = ? AND network = ?;
 INSERT_PORTAL=INSERT INTO {Portal} (network, name, destination, world, x, y, z, ownerUUID, gateFileName, facing, flipZ) VALUES (?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?);
-INSERT_INTER_PORTAL=INSERT INTO {InterPortal} (network, name, destination, world, x, y, z, ownerUUID, gateFileName, facing, flipZ, homeServerId, isOnline) VALUES (?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?);
+INSERT_INTER_PORTAL=INSERT INTO {InterPortal} (network, name, destination, world, x, y, z, ownerUUID, gateFileName, facing, flipZ, homeServerId) VALUES (?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?);
 DELETE_PORTAL=DELETE FROM {Portal} WHERE name = ? AND network = ?;
 DELETE_INTER_PORTAL=DELETE FROM {InterPortal} WHERE name = ? AND network = ?;
 REPLACE_SERVER_INFO=REPLACE INTO {ServerInfo} (serverId, serverName) VALUES(?, ?);
