--- a/src/main/resources/database/generic-queries.properties
+++ b/src/main/resources/database/generic-queries.properties
@@ -1,6 +1,6 @@
 GET_ALL_PORTALS=SELECT * FROM {PortalView};
 GET_ALL_INTER_PORTALS=SELECT * FROM {InterPortalView};
-GET_ALL_FLAGS=SELECT id, `character` FROM {Flag};
+GET_ALL_PORTAL_FLAGS=SELECT id, `character` FROM {Flag};
 UPDATE_LAST_KNOWN_NAME=REPLACE INTO {LastKnownName} (uuid, lastKnownName) VALUES (?, ?);"
 CREATE_TABLE_PORTAL=CREATE TABLE IF NOT EXISTS {Portal} (name NVARCHAR(180) NOT NULL, network NVARCHAR(180) NOT NULL, destination NVARCHAR(180), world NVARCHAR(255) NOT NULL, x INTEGER, y INTEGER, z INTEGER, ownerUUID VARCHAR(36), gateFileName NVARCHAR(255), facing INTEGER, flipZ BOOLEAN, PRIMARY KEY (name, network));
 CREATE_TABLE_INTER_PORTAL=CREATE TABLE IF NOT EXISTS {InterPortal} (name NVARCHAR(180) NOT NULL, network NVARCHAR(180) NOT NULL, destination NVARCHAR(180), world NVARCHAR(255) NOT NULL, x INTEGER, y INTEGER, z INTEGER, ownerUUID VARCHAR(36), gateFileName NVARCHAR(255), facing INTEGER, flipZ BOOLEAN, isOnline BOOLEAN, homeServerId VARCHAR(36), PRIMARY KEY (name, network));
@@ -24,7 +24,7 @@ CREATE_TABLE_PORTAL_FLAG_RELATION=CREATE TABLE IF NOT EXISTS {PortalFlagRelation
 CREATE_TABLE_INTER_PORTAL_FLAG_RELATION=CREATE TABLE IF NOT EXISTS {InterPortalFlagRelation} (name NVARCHAR(180) NOT NULL, network NVARCHAR(180) NOT NULL, flag INTEGER NOT NULL, PRIMARY KEY (name, network, flag), FOREIGN KEY (name, network) REFERENCES {InterPortal} (name, network), FOREIGN KEY (flag) REFERENCES {Flag} (id));
 CREATE_VIEW_PORTAL=CREATE VIEW IF NOT EXISTS {PortalView} AS SELECT {Portal}.*, COALESCE(GROUP_CONCAT({Flag}.`character`, ''), '') AS flags, {LastKnownName}.lastKnownName FROM {Portal} LEFT OUTER JOIN {PortalFlagRelation} ON {Portal}.name = {PortalFlagRelation}.name AND {Portal}.network = {PortalFlagRelation}.network LEFT OUTER JOIN {Flag} ON {PortalFlagRelation}.flag = {Flag}.id LEFT OUTER JOIN {LastKnownName} ON {Portal}.network = {LastKnownName}.uuid GROUP BY {Portal}.name, {Portal}.network;
 CREATE_VIEW_INTER_PORTAL=CREATE VIEW IF NOT EXISTS {InterPortalView} AS SELECT {InterPortal}.*, COALESCE(GROUP_CONCAT({Flag}.`character`, ''), '') AS flags, {LastKnownName}.lastKnownName, {ServerInfo}.serverName FROM {InterPortal} LEFT OUTER JOIN {PortalFlagRelation} ON {InterPortal}.name = {PortalFlagRelation}.name AND {InterPortal}.network = {InterPortalFlagRelation}.network LEFT OUTER JOIN {Flag} ON {InterPortalFlagRelation}.flag = {Flag}.id LEFT OUTER JOIN {LastKnownName} ON {InterPortal}.network = {LastKnownName}.uuid LEFT OUTER JOIN {ServerInfo} ON {ServerInfo}.serverId = {InterPortal}.homeServerId GROUP BY {InterPortal}.name, {InterPortal}.network;
-INSERT_FLAG=INSERT INTO {Flag} (`character`) VALUES (?);
+INSERT_PORTAL_FLAG=INSERT INTO {Flag} (`character`) VALUES (?);
 INSERT_PORTAL_FLAG_RELATION=INSERT INTO {PortalFlagRelation} (name, network, flag) VALUES (?, ?, (SELECT id FROM {Flag} WHERE `character` = ?));
 INSERT_INTER_PORTAL_FLAG_RELATION=INSERT INTO {InterPortalFlagRelation} (name, network, flag) VALUES (?, ?, (SELECT id FROM {Flag} WHERE `character` = ?));
 DELETE_PORTAL_FLAG_RELATION=DELETE FROM {PortalFlagRelation} WHERE name = ? AND network = ?;
