Adds a proper check for existing index when using MySQL

--- a/src/main/resources/database/sqlite-queries.properties
+++ b/src/main/resources/database/sqlite-queries.properties
@@ -34,3 +34,5 @@ INSERT_INTER_PORTAL=INSERT INTO {InterPortal} (network, name, destination, world
 DELETE_PORTAL=DELETE FROM {Portal} WHERE name = ? AND network = ?;
 DELETE_INTER_PORTAL=DELETE FROM {InterPortal} WHERE name = ? AND network = ?;
 REPLACE_SERVER_INFO=REPLACE INTO {ServerInfo} (serverId, serverName) VALUES(?, ?);
+SHOW_INDEX_PORTAL_POSITION=SHOW INDEX FROM {PortalPosition} WHERE Key_name = {PortalPositionIndex};
+SHOW_INDEX_INTER_PORTAL_POSITION=SHOW INDEX FROM {InterPortalPosition} WHERE Key_name = {InterPortalPositionIndex};
