--- a/pom.xml
+++ b/pom.xml
@@ -75,7 +75,7 @@
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-log4j12</artifactId>
+            <artifactId>slf4j-api</artifactId>
             <version>2.0.0-alpha5</version>
             <scope>compile</scope>
         </dependency>
