--- a/pom.xml
+++ b/pom.xml
@@ -64,8 +64,8 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.41</version>
-            <scope>provided</scope>
+            <scope>runtime</scope>
+            <version>8.0.13</version>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
